# reflexive-closure.hs

./: .gitignore  CHANGELOG.md  README.md  reflexive-closure.cabal
.github/workflows/: ci.yml
src/Data/: ReflexiveClosure.hs
